Added Mapping for MissionSeries date ranges